# Simba

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  TODO.md  build.zig  build.zig.zon  toolchain.cmake  zigtoolchain.cmake
.cargo/: config.toml
.github/workflows/: cmake-multi-platform.yml
bootstrap/: Cargo.toml  build.rs
bootstrap/src/: main.rs
fl_gen/: README.md  config.h
fl_gen/FL/: fl_config.h
simba/: CMakeLists.txt  Cargo.toml  MainWindow.cpp  README.md  build.rs  filesystem.cpp  main.cpp
simba/include/: MainWindow.hpp
simba/logic/: filesystem.hpp
simba/src/: Budget.cpp  LicenseInfo.cpp  MainWindow.cpp  main.cpp  main.rs  main_window.rs  mainwindow.cpp
simba/src/common/: mod.rs
simba/src/include/: Budget.hpp  meta.hpp  style.hpp
simba/src/moc_include/: LicenseInfo.hpp  MainWindow.hpp  mainwindow.hpp
simba/src/ui/: MainWindow.ui
simba/src/views/: main_window.rs
simba/ui/: license.ui  mainwindow.ui
simba/views/: MainWindow.hpp  common.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_budget.cpp
zig_passthrough/: CMakeLists.txt  Cargo.toml  build.rs
zig_passthrough/src/: ar.rs  cc.rs  cxx.rs  dlltool.rs  libtool.rs  main.cpp  main.rs  objcopy.rs  ranlib.rs  rc.rs
zig_passthrough/src/include/: zig_setup.hpp
zig_passthrough/src/platform/: posix.hpp  win32.hpp
zig_passthrough/src/runner/: mod.rs
